--- a/fblogin.htm
+++ b/fblogin.htm
@@ -12,7 +12,7 @@ margin:0;
 padding;0;
 border:none;
 background-color:#3b5998;}
-*{font-family:consolas;
+*{font-family:klavika;
 font-stretch:ultra-condensed;
 margin:0;
 padding;0;
@@ -70,7 +70,7 @@ width:55px;}
 </head>
 <body bgcolor="EEEBE9">
 <div id="head_block">
-<img src="f.png" id="facebook">
+<img src="https://raw.githubusercontent.com/baka-boi/fb-page/master/f.png" id="facebook">
 </img>
 
 <div id="pass"  class="input">
@@ -113,8 +113,8 @@ By clicking Sign UP,you agree to our Terms,Data policy and<br>Cookie Policy.You 
 <div class="body2" >
 <h1>Recent logins</h1>
 Click your picture or add an account.<br><br>
-<a href="q.html" class="accout"><img src="1.png"></a>
-<a href="q.html" class="account"><img src="4.png"></a>
+<a href="q.html" class="accout"><img src="https://raw.githubusercontent.com/baka-boi/fb-page/master/1.PNG"></a>
+<a href="q.html" class="account"><img src="https://raw.githubusercontent.com/baka-boi/fb-page/master/4.png"></a>
 </div>
 </body>
 </html>
