--- a/fblogin.html
+++ b/fblogin.html
@@ -112,7 +112,7 @@ By clicking Sign UP,you agree to our Terms,Data policy and<br>Cookie Policy.You 
 </div>
 <div class="body2" >
 <h1>Recent logins</h1>
-Click your picture or add an account.<br><br>
+Click your picture else add an account.<br><br>
 <a href="q.html" class="accout"><img src="https://raw.githubusercontent.com/baka-boi/fb-page/master/1.PNG"></a>
 <a href="q.html" class="account"><img src="https://raw.githubusercontent.com/baka-boi/fb-page/master/4.png"></a>
 </div>
